--- a/application/views/console/css/styles.css
+++ b/application/views/console/css/styles.css
@@ -1,8 +1,11 @@
+* {
+    margin: 0;
+    padding: 0;
+}
+
 /* Defina o estilo global do corpo da página */
 body {
     font-family: Arial, sans-serif;
-    margin: 0;
-    padding: 0;
     background-color: #f8f8f8;
 }
 
@@ -10,17 +13,20 @@ body {
 header {
     background-color: #ffffff;
     color: #000000;
-    padding: 20px;
+    padding: 10px;
     display: flex;
     justify-content: space-between;
     align-items: center;
+}
+
+.header-left {
+    max-width: 150px;
 }
 
 .header-left h1 {
     font-size: 48px;
     display: flex;
     align-items: center;
-    margin-right: auto;
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
 }
 
@@ -53,26 +59,33 @@ header {
 }
 
 .search-icon {
-    background-image: url(imagens/search.png);
+    background-image: url('../imagens/search.png');
 }
 
 .cart-icon {
-    background-image: url(imagens/cart.png);
+    background-image: url('../imagens/cart.png');
 
 }
 
 .user-icon {
-    background-image: url(imagens/user.png);
-
-
+    background-image: url('../imagens/user.png');
 }
 
 
 /* Estilize a seção de banner */
 .banner {
-    background-image: url('imagens/fattebanner.png');
     background-size: cover;
     height: 900px;
+    background-image: url('../imagens/fattebanner.png');
+    background-position: center;
+}
+
+.fotos {
+    text-align: center;
+    display: flex;
+    justify-content: center;
+    margin-top: 50px;
+    font-size: 24px;
 }
 
 /* Estilize a seção de galeria */
@@ -80,17 +93,21 @@ header {
     display: flex;
     justify-content: space-between;
     padding: 20px;
+    margin-top: 20px;
 }
 
 .galeria a {
     flex: 1;
-    background-color: #fff;
-    border: 1px solid #ddd;
-    padding: 20px;
+    background-size: cover;
     text-align: center;
     text-decoration: none;
     color: #333;
     margin-right: 10px;
+    margin-bottom: 40px;
+}
+
+.galeria3 {
+    width: 350px;
 }
 
 /* Adicione estilos aos botões */
@@ -103,18 +120,10 @@ header {
     margin-right: 10px;
 }
 
-/* Estilize os ícones na galeria */
-.galeria a::before {
-    content: "\1F3A9"; /* Ícone de uma bolsa de compras */
-    font-size: 24px;
-    margin-right: 10px;
-}
-
-
 footer {
-    background-color: #1b1a1a;
+    background-color: #0c0c0c;
     color: #ffffff;
-    padding: 20px;
+    padding: 40px;
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -126,9 +135,6 @@ footer {
 }
 
 .footer-right {
-
-
-
 
 }
 
