--- a/application/views/console/css/styles.css
+++ b/application/views/console/css/styles.css
@@ -56,7 +56,8 @@ body {
     display: flex;
     justify-content: center;
     margin-top: 50px;
-    font-size: 24px;
+    font-size: 30px;
+    font-family: 'Times New Roman', Times, serif;
 }
 
 /* Estilize a seção de galeria */
@@ -107,5 +108,4 @@ footer {
 }
 
 .footer-right {
-
 }
