--- a/application/views/console/css/styles.css
+++ b/application/views/console/css/styles.css
@@ -82,6 +82,73 @@ body {
     width: 350px;
 }
 
+/* destaques */
+.destaques{
+    text-align: center;
+    margin-top: 50px;
+    margin-bottom: 30px;
+    font-size: 30px;
+    font-family: 'Times New Roman', Times, serif;
+    
+
+}
+.card {
+width: 700px;
+height: 500px;
+border-radius: 4px;
+background: #ffffff;
+display: flex;
+gap: 5px;
+padding: .4em;
+text-align: center;
+margin: auto;
+
+}
+
+.card p {
+height: 100%;
+flex: 1;
+overflow: hidden;
+cursor: pointer;
+border-radius: 2px;
+transition: all .5s;
+background: #ffffff;
+border: 1px solid #5c5a5a;
+display: grid;
+position: relative;
+justify-content: center;
+align-items: center;
+text-align: center;
+}
+
+.card p:hover {
+flex: 4;
+}
+
+.card p span {
+min-width: 14em;
+padding: .5em;
+text-align: center;
+transform: rotate(-90deg);
+transition: all .5s;
+text-transform: uppercase;
+color: #ffffff;
+position: absolute;
+letter-spacing: .1em;
+justify-content: center;
+
+}
+.card img {
+max-width: 750px;
+object-fit: fill;
+position: relative;
+
+}
+
+.card p:hover span {
+transform: rotate(0);
+}
+
 /* Adicione estilos aos botões */
 .btn {
     background-color: #ffffff;
