--- a/application/views/console/css/styles.css
+++ b/application/views/console/css/styles.css
@@ -273,7 +273,78 @@ footer {
     .footer-right {
         text-align: center;
     }
+    .card {
+        width: 450px;
+        height: 650px;
+        border-radius: 4px;
+        background: #ffffff;
+        display: flex;
+        gap: 5px;
+        padding: .4em;
+        text-align: center;
+        margin: auto;
+        
+
+
+
+        }
+        
+        .card p {
+        height: 100%;
+        flex: 1;
+        overflow: hidden;
+        cursor: pointer;
+        border-radius: 2px;
+        transition: all .5s;
+        background: #ffffff;
+        border: 1px solid #5c5a5a;
+        display: grid;
+        position: relative;
+        justify-content: center;
+        align-items: center;
+        text-align: center;
+        
+
+
+        }
+        
+        .card p:hover {
+        flex: 4;
+
+
+
+        }
+        
+        .card p span {
+        min-width: 14em;
+        padding: .5em;
+        text-align: center;
+        transform: rotate(-90deg);
+        transition: all .5s;
+        text-transform: uppercase;
+        color: #ffffff;
+        position: absolute;
+        letter-spacing: .1em;
+        justify-content: center;
+
+
+
+        
+        }
+        .card img {
+        max-width: 750px;
+        object-fit: fill;
+        position: relative;
+
+        
+        
+        }
+        
+        .card p:hover span {
+        transform: rotate(0);
+        }
 }
+
 
 @media only screen and (max-width: 480px) {
     .header {
@@ -317,4 +388,75 @@ footer {
     footer {
         padding: 15px;
     }
+
+    .card {
+        width: 350px;
+        height: 550px;
+        border-radius: 4px;
+        background: #ffffff;
+        display: flex;
+        gap: 5px;
+        padding: .4em;
+        text-align: center;
+        margin: auto;
+        
+
+
+
+        }
+        
+        .card p {
+        height: 100%;
+        flex: 1;
+        overflow: hidden;
+        cursor: pointer;
+        border-radius: 2px;
+        transition: all .5s;
+        background: #ffffff;
+        border: 1px solid #5c5a5a;
+        display: grid;
+        position: relative;
+        justify-content: center;
+        align-items: center;
+        text-align: center;
+        
+
+
+        }
+        
+        .card p:hover {
+        flex: 4;
+
+
+
+        }
+        
+        .card p span {
+        min-width: 14em;
+        padding: .5em;
+        text-align: center;
+        transform: rotate(-90deg);
+        transition: all .5s;
+        text-transform: uppercase;
+        color: #ffffff;
+        position: absolute;
+        letter-spacing: .1em;
+        justify-content: center;
+
+
+
+        
+        }
+        .card img {
+        max-width: 750px;
+        object-fit: fill;
+        position: relative;
+
+
+        
+        }
+        
+        .card p:hover span {
+        transform: rotate(0);
+        }
 }
