--- a/application/views/console/css/sobre.css
+++ b/application/views/console/css/sobre.css
@@ -17,31 +17,39 @@ body {
     background-color: #fff; /* Ou qualquer cor de fundo desejada */
 }
   
-.logo {
+.logo a{
     font-size: 40px;
     font-weight: bold; /* Ajuste o peso da fonte conforme necessário */
+    text-decoration: none;
+    color: black;
 }
   
-.menu ul {
+#nav ul {
     list-style-type: none;
     padding: 0;
     margin: 0;
 }
   
-.menu li {
+#nav li {
     display: inline-block;
-    margin-right: 30px; /* Ajuste o espaçamento entre os itens do menu */
-    font-size: 20px; /* Ajuste o tamanho da fonte conforme necessário */
+    margin-right: 30px; 
+    font-size: 20px; 
     font-weight: bold;
+}
+
+#menu a {
+    text-decoration: none;
+    color: black;
+}
+
+button {
+    display: none;
 }
   
 .icons span {
     margin-left: 15px; /* Ajuste o espaçamento entre os ícones */
     font-size: 24px; /* Ajuste o tamanho da fonte conforme necessário */
 }
-  
-
-
 
 /* Estilize a seção de banner */
 .banner {
@@ -137,4 +145,83 @@ footer {
 .sobre img {
     width: 1520px;
     height: 1080px;
+}
+
+
+@media screen and (max-width: 1330px) {
+    .header {
+        width: 100%;
+        position: absolute;
+    }
+
+    .imgsobre {
+        background-size: cover;
+        width: fit-content;
+    }
+
+    #menu {
+        display: block;
+        position: absolute;
+        width: 100%;
+        top: 50px;
+        right: 0px;
+        background: white;
+        transition: 0.6s;
+        z-index: 1000;
+        height: 0px;
+        visibility: hidden;
+        overflow-y: hidden;
+      }
+
+      #nav.active #menu {
+        height: calc(100vh - 70px);
+        visibility: visible;
+        overflow-y: auto;
+      }
+
+      #menu a {
+        padding: 1rem 0;
+        margin: 0 1rem;
+        border-bottom: 2px solid rgba(0, 0, 0, 0.05);
+      }
+
+      #btn-mobile {
+        display: flex;
+        padding: 0.5rem 1rem;
+        font-size: 1rem;
+        border: none;
+        background: none;
+        cursor: pointer;
+        gap: 0.5rem;
+      }
+
+      #hamburger {
+        border-top: 2px solid;
+        width: 20px;
+      }
+
+      #hamburger::after,
+      #hamburger::before {
+        content: '';
+        display: block;
+        width: 20px;
+        height: 2px;
+        background: currentColor;
+        margin-top: 5px;
+        transition: 0.3s;
+        position: relative;
+      }
+
+      #nav.active #hamburger {
+        border-top-color: transparent;
+      }
+
+      #nav.active #hamburger::before {
+        transform: rotate(135deg);
+      }
+
+      #nav.active #hamburger::after {
+        transform: rotate(-135deg);
+        top: -7px;
+      }
 }
