--- a/application/views/console/css/styles.css
+++ b/application/views/console/css/styles.css
@@ -13,35 +13,44 @@ body {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 20px 30px; /* Ajuste o preenchimento conforme necessário */
-    background-color: #fff; /* Ou qualquer cor de fundo desejada */
+    padding: 20px 30px;
+    background-color: #fff; 
+    position: sticky;
+    top: 0;
 }
   
 .logo {
     font-size: 40px;
-    font-weight: bold; /* Ajuste o peso da fonte conforme necessário */
+    font-weight: bold; 
 }
   
-.menu ul {
+#nav ul {
     list-style-type: none;
     padding: 0;
     margin: 0;
 }
   
-.menu li {
+#nav li {
     display: inline-block;
-    margin-right: 30px; /* Ajuste o espaçamento entre os itens do menu */
-    font-size: 20px; /* Ajuste o tamanho da fonte conforme necessário */
+    margin-right: 30px; 
+    font-size: 20px; 
     font-weight: bold;
+}
+
+#menu a {
+    text-decoration: none;
+    color: black;
 }
   
 .icons span {
-    margin-left: 15px; /* Ajuste o espaçamento entre os ícones */
-    font-size: 24px; /* Ajuste o tamanho da fonte conforme necessário */
+    margin-left: 15px; 
+    font-size: 24px; 
+}
+
+button {
+    display: none;
 }
   
-
-
 
 /* Estilize a seção de banner */
 .banner {
@@ -204,7 +213,13 @@ footer {
 /* Responsividade para telas menores */
 @media screen and (max-width: 1330px) {
     .header {
-        width: 90%;
+        width: 95%;
+        position: absolute;
+    }
+
+    .banner {
+        background-size: cover;
+        width: 100%;
     }
 
     .galeria {
@@ -212,6 +227,72 @@ footer {
         margin-right: auto;
         margin-left: auto;
     }
+
+    #menu {
+        display: block;
+        position: absolute;
+        width: 100%;
+        top: 50px;
+        right: 0px;
+        background: white;
+        transition: 0.6s;
+        z-index: 1000;
+        height: 0px;
+        visibility: hidden;
+        overflow-y: hidden;
+      }
+
+      #nav.active #menu {
+        height: calc(100vh - 70px);
+        visibility: visible;
+        overflow-y: auto;
+      }
+
+      #menu a {
+        padding: 1rem 0;
+        margin: 0 1rem;
+        border-bottom: 2px solid rgba(0, 0, 0, 0.05);
+      }
+
+      #btn-mobile {
+        display: flex;
+        padding: 0.5rem 1rem;
+        font-size: 1rem;
+        border: none;
+        background: none;
+        cursor: pointer;
+        gap: 0.5rem;
+      }
+
+      #hamburger {
+        border-top: 2px solid;
+        width: 20px;
+      }
+
+      #hamburger::after,
+      #hamburger::before {
+        content: '';
+        display: block;
+        width: 20px;
+        height: 2px;
+        background: currentColor;
+        margin-top: 5px;
+        transition: 0.3s;
+        position: relative;
+      }
+
+      #nav.active #hamburger {
+        border-top-color: transparent;
+      }
+
+      #nav.active #hamburger::before {
+        transform: rotate(135deg);
+      }
+
+      #nav.active #hamburger::after {
+        transform: rotate(-135deg);
+        top: -7px;
+      }
 }
 
 @media screen and (max-width: 768px) {
@@ -223,7 +304,7 @@ footer {
         font-size: 30px;
     }
 
-    .menu li {
+    #nav li {
         margin-right: 15px; 
         font-size: 16px; 
     }
@@ -242,6 +323,7 @@ footer {
 
     .galeria a {
         margin-bottom: 20px;
+        flex-basis: 100%;
     }
 
     .card {
@@ -355,7 +437,7 @@ footer {
         font-size: 26px;
     }
 
-    .menu li {
+    #nav li {
         margin-right: 10px; 
         font-size: 14px; 
     }
