--- a/application/views/console/css/styles.css
+++ b/application/views/console/css/styles.css
@@ -295,7 +295,7 @@ footer {
       }
 }
 
-@media screen and (max-width: 768px) {
+@media (max-width: 768px) {
     .header {
         padding: 10px 20px;
     }
@@ -355,9 +355,10 @@ footer {
     .footer-right {
         text-align: center;
     }
+    
     .card {
-        width: 450px;
-        height: 650px;
+        width: 550px;
+        height: 450px;
         border-radius: 4px;
         background: #ffffff;
         display: flex;
@@ -365,6 +366,9 @@ footer {
         padding: .4em;
         text-align: center;
         margin: auto;
+        flex-wrap:wrap; 
+        flex-direction:row; 
+        justify-content:center;
         
 
 
@@ -428,7 +432,7 @@ footer {
 }
 
 
-@media only screen and (max-width: 480px) {
+@media (max-width: 480px) {
     .header {
         padding: 10px 15px;
     }
@@ -472,8 +476,8 @@ footer {
     }
 
     .card {
-        width: 350px;
-        height: 550px;
+        width: 400px;
+        height: 450px;
         border-radius: 4px;
         background: #ffffff;
         display: flex;
@@ -481,6 +485,9 @@ footer {
         padding: .4em;
         text-align: center;
         margin: auto;
+        flex-wrap:wrap; 
+        flex-direction:row; 
+        justify-content:center;
         
 
 
