--- a/application/views/console/css/sobre.css
+++ b/application/views/console/css/sobre.css
@@ -157,6 +157,7 @@ footer {
     .imgsobre {
         background-size: cover;
         width: fit-content;
+        background-position: center center;
     }
 
     #menu {
