--- a/application/views/console/css/perfil.css
+++ b/application/views/console/css/perfil.css
@@ -4,10 +4,46 @@ body {
     padding: 0;
 }
 
-header {
-    background-color: #f2f2f2;
-    padding: 20px;
-    text-align: center;
+.header {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 20px 30px;
+    background-color: #fff; 
+    position: sticky;
+    top: 0;
+}
+  
+.logo {
+    font-size: 40px;
+    font-weight: bold; 
+}
+  
+#nav ul {
+    list-style-type: none;
+    padding: 0;
+    margin: 0;
+}
+  
+#nav li {
+    display: inline-block;
+    margin-right: 30px; 
+    font-size: 20px; 
+    font-weight: bold;
+}
+
+#menu a {
+    text-decoration: none;
+    color: black;
+}
+  
+.icons span {
+    margin-left: 15px; 
+    font-size: 24px; 
+}
+
+button {
+    display: none;
 }
 
 .container {
