--- a/application/views/console/css/atualizar_perfil.css
+++ b/application/views/console/css/atualizar_perfil.css
@@ -30,6 +30,7 @@ label {
 }
 input[type="text"],
 input[type="email"],
+input[type="password"],
 select {
     width: 100%;
     padding: 10px;
@@ -38,10 +39,10 @@ select {
     box-sizing: border-box;
     font-size: 16px;
 }
-.submit-button {
+.submit-button{
     text-align: center;
 }
-button[type="submit"] {
+button[type="submit"]{
     padding: 10px 20px;
     background-color: #333;
     color: #fff;
@@ -50,6 +51,18 @@ button[type="submit"] {
     cursor: pointer;
     font-size: 16px;
 }
+
+.voltar {
+    padding: 10px 20px;
+    background-color: #333;
+    color: #fff;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+    font-size: 16px;
+    text-decoration: none;
+}
+
 button[type="submit"]:hover {
     background-color: #555;
 }
