--- a/application/views/console/css/sobre.css
+++ b/application/views/console/css/sobre.css
@@ -3,55 +3,73 @@
     padding: 0;
 }
 
-/* Defina o estilo global do corpo da página */
 body {
     font-family: Arial, sans-serif;
     background-color: #f8f8f8;
 }
 
 .header {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding: 20px 30px; /* Ajuste o preenchimento conforme necessário */
-    background-color: #fff; /* Ou qualquer cor de fundo desejada */
+    background-color: #fff;
 }
-  
-.logo a{
+
+.logo a {
     font-size: 40px;
-    font-weight: bold; /* Ajuste o peso da fonte conforme necessário */
-    text-decoration: none;
-    color: black;
-}
-  
-#nav ul {
-    list-style-type: none;
-    padding: 0;
-    margin: 0;
-}
-  
-#nav li {
-    display: inline-block;
-    margin-right: 30px; 
-    font-size: 20px; 
     font-weight: bold;
-}
-
-#menu a {
     text-decoration: none;
     color: black;
 }
 
-button {
-    display: none;
-}
-  
-.icons span {
-    margin-left: 15px; /* Ajuste o espaçamento entre os ícones */
-    font-size: 24px; /* Ajuste o tamanho da fonte conforme necessário */
+.nav-link {
+    font-size: 20px;
+    font-weight: bold;
+    color: black;
+    text-decoration: none;
 }
 
-/* Estilize a seção de banner */
+.nav-link:hover {
+    color: #000;
+}
+
+#btn-mobile {
+    background: none;
+    border: none;
+    cursor: pointer;
+}
+
+#hamburger {
+    border-top: 2px solid;
+    width: 20px;
+}
+
+#hamburger::after,
+#hamburger::before {
+    content: '';
+    display: block;
+    width: 20px;
+    height: 2px;
+    background: currentColor;
+    margin-top: 5px;
+    transition: 0.3s;
+    position: relative;
+}
+
+#nav.active #hamburger {
+    border-top-color: transparent;
+}
+
+#nav.active #hamburger::before {
+    transform: rotate(135deg);
+}
+
+#nav.active #hamburger::after {
+    transform: rotate(-135deg);
+    top: -7px;
+}
+
+.icons span {
+    font-size: 24px;
+}
+
 .banner {
     background-size: cover;
     height: 900px;
@@ -59,24 +77,7 @@ button {
     background-position: center;
 }
 
-.fotos {
-    text-align: center;
-    display: flex;
-    justify-content: center;
-    margin-top: 50px;
-    font-size: 24px;
-}
-
-/* Estilize a seção de galeria */
-.galeria {
-    display: flex;
-    justify-content: space-between;
-    padding: 20px;
-    margin-top: 20px;
-}
-
 .galeria a {
-    flex: 1;
     background-size: cover;
     text-align: center;
     text-decoration: none;
@@ -84,12 +85,10 @@ button {
     margin-right: 10px;
     margin-bottom: 40px;
 }
-
 .galeria3 {
     width: 350px;
 }
 
-/* Adicione estilos aos botões */
 .btn {
     background-color: #ffffff;
     color: #000000;
@@ -100,31 +99,17 @@ button {
     cursor: pointer;
 }
 
-footer {
-    background-color: #0c0c0c;
-    color: #ffffff;
-    padding: 40px;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
+.footer {
+    background-color: black;
 }
 
-
-.sobre {
-    margin: 0 auto;
-    justify-content: center;
-    text-align: justify;
-}
-
-.sobre h1{
+.sobre h1 {
     font-family: Arial, sans-serif;
-    margin: 50px 0px 0px 150px;
-    padding: 0px;
-    
-
+    margin: 50px 0 0 150px;
+    padding: 0;
 }
 
-.sobre p{
+.sobre p {
     font-family: 'Arial', sans-serif;
     line-height: 1.6;
     margin: 0;
@@ -132,89 +117,9 @@ footer {
     width: 80%;
     margin: auto;
     overflow: hidden;
-  }
-
-.sobre img {
-    width: 1520px;
-    height: 1080px;
 }
 
-
-@media screen and (max-width: 1330px) {
-    .header {
-        width: 100%;
-        position: absolute;
-    }
-
-    .imgsobre {
-        background-size: cover;
-        width: fit-content;
-        background-position: center center;
-    }
-
-    #menu {
-        display: block;
-        position: absolute;
-        width: 100%;
-        top: 50px;
-        right: 0px;
-        background: white;
-        transition: 0.6s;
-        z-index: 1000;
-        height: 0px;
-        visibility: hidden;
-        overflow-y: hidden;
-      }
-
-      #nav.active #menu {
-        height: calc(100vh - 70px);
-        visibility: visible;
-        overflow-y: auto;
-      }
-
-      #menu a {
-        padding: 1rem 0;
-        margin: 0 1rem;
-        border-bottom: 2px solid rgba(0, 0, 0, 0.05);
-      }
-
-      #btn-mobile {
-        display: flex;
-        padding: 0.5rem 1rem;
-        font-size: 1rem;
-        border: none;
-        background: none;
-        cursor: pointer;
-        gap: 0.5rem;
-      }
-
-      #hamburger {
-        border-top: 2px solid;
-        width: 20px;
-      }
-
-      #hamburger::after,
-      #hamburger::before {
-        content: '';
-        display: block;
-        width: 20px;
-        height: 2px;
-        background: currentColor;
-        margin-top: 5px;
-        transition: 0.3s;
-        position: relative;
-      }
-
-      #nav.active #hamburger {
-        border-top-color: transparent;
-      }
-
-      #nav.active #hamburger::before {
-        transform: rotate(135deg);
-      }
-
-      #nav.active #hamburger::after {
-        transform: rotate(-135deg);
-        top: -7px;
-      }
+.sobre img {
+    width: 100%;
+    height: auto;
 }
